[package]
name = "dune-event-loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
threadpool = "1.8.1"
downcast-rs = { version = "1.2.0", default-features = false }
mio = { version = "0.8.4", features = ["os-poll", "net"] }
