[package]
name = "dune_event_loop"
description = "Dune's event-loop library used for timers, async tasks and TCP connections"
authors = ["Alex Alikiotis <alexalikiotis5@gmail.com>"]
version = "0.1.0"
repository = "https://gitlab.com/aalykiot/ev_loop"
license = "MIT"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
rayon = "1.6.1"
downcast-rs = { version = "1.2.0", default-features = false }
mio = { version = "0.8.4", features = ["os-poll", "net"] }
notify = "5.0.0"
